fix(docs): adjust scrollbar width styling for modal lock (#245)

--- a/docs/src/assets/styles/common.css
+++ b/docs/src/assets/styles/common.css
@@ -6,10 +6,12 @@
   background: rgb(190, 200, 200);
 }
 
-html {
+html,
+body {
   scrollbar-width: thin;
   scrollbar-color: #eaeaea transparent;
 }
+
 
 .custom-carousel-item {
   margin: 0;
